--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -48,7 +48,7 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
-                    <div class="fraca"></div>
+                    <div class="forca forte"></div>
                     <div
                      class="prametro-senha-texto">
                     <p>fraca</p>
@@ -59,6 +59,7 @@
             </div>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
