paou em 7:48  o vidio do trabalho 7

--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -48,7 +48,7 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
-                    <div class="forca fraca"></div>
+                    <div class="forca fraca forte"></div>
                     <div
                      class="prametro-senha-texto">
                     <p>fraca</p>
