Update index.html melhorei

--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -62,9 +62,15 @@
                     <p>fraca</p>
                     <p>média</p>
                     <p>forte</p>
+                       </div>
+                    <p class="entropia"></p>
                     </div>
                 </div>
             </div>
+    </section>
+    |<script src="main.js"></script>
+</body>
+</html>
         </div>
     </section>
     <script src="main.js"></script>
