--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -56,7 +56,7 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
-                    <div class="forca fraca forte"></div>
+                    <div class="fraca mèdia forte"></div>
                     <div
                      class="prametro-senha-texto">
                     <p>fraca</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
     </section>
-    |<script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
         </div>
