--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -25,13 +25,10 @@
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                <div class="parametro-senha-botões">   
-                <button
-                class="parametro-senha-botao">-</
-                button>
+                <div class="parametro-senha-botoes">   
+               <button class="parametro-senha-botao">-</button>
                 <p class="parametro-senha__texto">12</p>
-                <button class="parametro-senha__botao">
-                +</button>
+                <button class="parametro-senha__botao">+</button>
                 </div>
                 </div>                
                 <div class="parametro-senha">
