Update index.html melhorei

--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -54,8 +54,7 @@
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
                     <div class="fraca mèdia forte"></div>
-                    <div
-                     class="prametro-senha-texto">
+                    <div class="prametro-senha-texto">
                     <p>fraca</p>
                     <p>média</p>
                     <p>forte</p>
