Update index.html arrumei

--- a/github 3@C/index.html
+++ b/github 3@C/index.html
@@ -53,7 +53,7 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
-                    <div class="fraca mèdia forte"></div>
+                    <div class="forca forte"></div>
                     <div class="prametro-senha-texto">
                     <p>fraca</p>
                     <p>média</p>
